Fixed z-index issue on profile tab button border cover

--- a/AgencyApp/static/AgencyApp/css/profile.css
+++ b/AgencyApp/static/AgencyApp/css/profile.css
@@ -68,11 +68,13 @@
 
 .profileTabButtonBorderCover
 {
-	width: 100%;
+	position: relative;
+	width: 99.5%;
+	margin-left: 0.5%;
 	background: #FFF;
-	height: 2px;
-	margin-top: 14px;
-	z-index: 3;
+	height: 3px;
+	margin-top: 12px;
+	z-index: 100;
 	opacity: 0;
 	transition: background .2s ease;
 	}
